# opencv_example

./: .gitignore  CMakeLists.txt  FaceRecog.h  TestBase.cpp  TestBase.h  check.h  main.cpp  opencv_test
